修改书籍链接地址

--- a/gitbooks/index.html
+++ b/gitbooks/index.html
@@ -45,7 +45,7 @@ title: 云谷计算
 									<span class="cbp_tmicon-phone"></span>
 									<!--span><b>JS</b></span>
 									<span class="i-react"></span-->
-									<span class="link"><a target="_blank" href="http://us.ygjs.tech/static/gitbooks/gopl-zh/">Read it</a></span>
+									<span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/gopl-zh/">Read it</a></span>
 								</li>
 							</ul>
 						</div>
@@ -63,7 +63,7 @@ title: 云谷计算
 									<!--span class="cbp_tmicon-phone"></span>
 									<span><b>JS</b></span>
 									<span class="i-react"></span-->
-									<span class="link"><a target="_blank" href="http://us.ygjs.tech/static/gitbooks/openstack_understand_Neutron/">Read it</a></span>
+									<span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/openstack_understand_Neutron/">Read it</a></span>
 								</li>
 							</ul>
 						</div>
@@ -81,7 +81,7 @@ title: 云谷计算
 									<!--span class="cbp_tmicon-phone"></span>
 									<span><b>JS</b></span>
 									<span class="i-vue"></span-->
-									<span class="link"><a target="_blank" href="http://us.ygjs.tech/static/gitbooks/build-web-application-with-golang/">Read it</a></span>
+									<span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/build-web-application-with-golang/">Read it</a></span>
 								</li>
 							</ul>
 						</div>
@@ -99,7 +99,7 @@ title: 云谷计算
 									<!--span class="cbp_tmicon-phone"></span>
 									<span><b>JS</b></span>
 									<a href="https://github.com/kissyteam/kissy"><span class="i-kissy"></span></a-->
-									<span class="link"><a target="_blank" href="http://us.ygjs.tech/static/gitbooks/blockchain-tutorial/">Read It</a></span>
+									<span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/blockchain-tutorial/">Read It</a></span>
 								</li>
 							</ul>
 						</div>
@@ -116,7 +116,7 @@ title: 云谷计算
 									<!--span class="cbp_tmicon-html"></span>
 									<span class="fa fa-css3"></span>
 									<span><b>JS</b></span-->
-									<span class="link"><a target="_blank" href="http://us.ygjs.tech/static/gitbooks/blockchain_guide/">Read It</a></span>
+									<span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/blockchain_guide/">Read It</a></span>
 								</li>
 							</ul>
 						</div>
@@ -134,7 +134,7 @@ title: 云谷计算
 									<!--span class="fa fa-css3"></span>
 									<span><b>JS</b></span>
 									<span class="i-jquery"></span-->
-									<span class="link"><a target="_blank" href="http://us.ygjs.tech/static/gitbooks/gene_sequencing_book/">Read It</a></span>
+									<span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/gene_sequencing_book/">Read It</a></span>
 								</li>
 							</ul>
 						</div>
@@ -149,7 +149,7 @@ title: 云谷计算
 								<li class="skill">
 									<!--span><b>Ae</b></span>
 									<span class="cbp_tmicon-video"></span-->
-									<span class="link"><a target="_blank" href="http://us.ygjs.tech/static/gitbooks/go-in-action-note/">Read It</a></span>
+									<span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/go-in-action-note/">Read It</a></span>
 								</li>
 							</ul>
 						</div>
@@ -166,7 +166,7 @@ title: 云谷计算
 								<li class="skill">
 									<!--span><b>Ae</b></span>
 									<span class="cbp_tmicon-video"></span-->
-									<span class="link"><a target="_blank" href="http://us.ygjs.tech/static/gitbooks/interrupt-virtualization/">Read It</a></span>
+									<span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/interrupt-virtualization/">Read It</a></span>
 								</li>
 							</ul>
 						</div>
@@ -182,23 +182,7 @@ title: 云谷计算
 									<!--span class="cbp_tmicon-font"></span>
 									<span><b>Ps</b></span>
 									<span><b>Ae</b></span-->
-									<span class="link"><a target="_blank" href="http://us.ygjs.tech/static/gitbooks/linux-block-driver/">Read It</a></span>
-								</li>
-							</ul>
-						</div>
-					</li>
-					<li>
-						<div class="cbp_tmlabel">
-							<h2>Linux进程的管理与调度</h2>
-							<time>2018-02</time>
-							<img src="images/work-puzzle.jpg">
-							<ul>
-								<li>原文来自<a href="http://blog.csdn.net/gatieme/article/list/9">JeanCheng</a>，云谷计算整理</li>
-								<li class="skill">
-									<!--span class="cbp_tmicon-font"></span>
-									<span><b>Ps</b></span>
-									<span><b>Ae</b></span-->
-									<span class="link"><a target="_blank" href="http://us.ygjs.tech/static/gitbooks/linux_Manager/">Read It</a></span>
+									<span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/linux-block-driver/">Read It</a></span>
 								</li>
 							</ul>
 						</div>
