导航栏修改

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,10 +1,5 @@
----
-layout: default
-<<<<<<< HEAD
+yout: default
 nav: 作品
-=======
-nav: 作品
->>>>>>> 3a444670c1ff2432d333414faceb00f88b45f8db
 title: 云谷计算
 ---
 
