--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -41,8 +41,8 @@ title: 云谷计算
                                     "Yanshuo.io" is an online full-featured presentation software to create Web-based slides which are linkable, sharable, cross-platform and without delivery friction. It differentiate from traditional presentation tools such as Powerpoint and Keynote due to its web-friendly and its strong belief in Web.
                                 </li>
                                 <li class="skill">
-                                    <span><b>JS</b></span>
-                                    <span class="i-react"></span>
+                                    <!--span><b>JS</b></span>
+                                    <span class="i-react"></span-->
                                     <span class="link"><a target="_blank" href="https://yanshuo.io">Try it</a></span>
                                 </li>
                             </ul>
