博客页面微改

--- a/gitbooks/index.html
+++ b/gitbooks/index.html
@@ -41,7 +41,7 @@ title: 云谷计算
                                     Go是一个开源的编程语言，它很容易用于构建简单、可靠和高效的软件。”（摘自Go语言官方网站：http://golang.org)Go是一个开源的编程语言，它很容易用于构建简单、可靠和高效的软件。”（摘自Go语言官方网站：http://golang.org),<b>本书是为了帮助你开始以有效的方式使用Go语言，充分利用语言本身的特性和自带的标准库去编写清晰地道的Go程序</b><a href="http://github.com/golang-china/gopl-zh">Go</a>
                                 </li>
                                 <li class="skill">
-                                    <span class="cbp_tmicon-phone"></span>
+                                    <!--span class="cbp_tmicon-phone"></span-->
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
                                     <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/gopl-zh/">Read it</a></span>
