RUST程序设计语言上传

--- a/gitbooks/index.html
+++ b/gitbooks/index.html
@@ -31,6 +31,24 @@ title: 云谷计算
             </header>
             <div class="main">
                 <ul class="cbp_tmtimeline" style="margin-top:0.1%;">
+					<li>
+                        <div class="cbp_tmlabel">
+                            <h2 id="boxoffice">Rust 程序设计语言（第二版） 简体中文版</h2>
+                            <time>2018-1</time>
+                            <img src="images/rust.jpg">
+                            <ul>
+                                <li>
+                                   Rust 程序设计语言（第二版） 简体中文版,云谷计算整理
+                                </li>
+                                <li class="skill">
+                                    <span class="cbp_tmicon-phone"></span>
+                                    <!--span><b>JS</b></span>
+                                    <span class="i-react"></span-->
+                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/rust-book/">Read it</a></span>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
                     <li>
                         <div class="cbp_tmlabel">
                             <h2 id="boxoffice">Go语言圣经(中文版)</h2>
