Linux内核书籍与mastering-elasticsearch书籍上传

--- a/gitbooks.html
+++ b/gitbooks.html
@@ -25,6 +25,45 @@ CTYPE html>
             </header>
             <div class="main">
                 <ul class="cbp_tmtimeline">
+                	<li>
+                        <div class="cbp_tmlabel">
+                            <h2 id="boxoffice">Linux 内核揭密 中文版</h2>
+                            <time>2018-4</time>
+                            <img src="images/rust.jpg">
+                            <ul>
+                                <li>
+                                   一系列关于 Linux 内核和其内在机理的帖子<br />
+                                   云谷计算整理
+                                </li>
+                                <li class="skill">
+                                    <span class="cbp_tmicon-phone"></span>
+                                    <!--span><b>JS</b></span>
+                                    <span class="i-react"></span-->
+                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/linux-insides-zh/">Read it</a></span>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="cbp_tmlabel">
+                            <h2 id="boxoffice">Mastering Elasticsearch(中文版)</h2>
+                            <time>2018-3</time>
+                            <img src="images/rust.jpg">
+                            <ul>
+                                <li>
+                                   学习Elasticsearch,<br />
+                                   译者：帅广应<br />
+                                   云谷计算整理
+                                </li>
+                                <li class="skill">
+                                    <span class="cbp_tmicon-phone"></span>
+                                    <!--span><b>JS</b></span>
+                                    <span class="i-react"></span-->
+                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/mastering-elasticsearch/">Read it</a></span>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
 					<li>
                         <div class="cbp_tmlabel">
                             <h2 id="boxoffice">Rust 程序设计语言（第二版） 简体中文版</h2>
