更新封面图

--- a/gitbooks/index.html
+++ b/gitbooks/index.html
@@ -35,7 +35,7 @@ title: 云谷计算
                         <div class="cbp_tmlabel">
                             <h2 id="boxoffice">Linux 内核揭密 中文版</h2>
                             <time>2018-4</time>
-                            <img src="images/rust.jpg">
+                            <img src="images/timg.jpg">
                             <ul>
                                 <li>
                                    一系列关于 Linux 内核和其内在机理的帖子<br />
@@ -54,7 +54,7 @@ title: 云谷计算
                         <div class="cbp_tmlabel">
                             <h2 id="boxoffice">Mastering Elasticsearch(中文版)</h2>
                             <time>2018-3</time>
-                            <img src="images/rust.jpg">
+                            <img src="images/elastic.jpg">
                             <ul>
                                 <li>
                                    学习Elasticsearch,<br />
