--- a/gitbooks.html
+++ b/gitbooks.html
@@ -2,7 +2,7 @@ CTYPE html>
 <html class="no-js">
     <head>
         <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta https-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>云谷计算 - Timeline</title>
         <link rel="stylesheet" type="text/css" href="css/timeline.css" />
@@ -39,7 +39,7 @@ CTYPE html>
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/linux-insides-zh/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/linux-insides-zh/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -59,7 +59,7 @@ CTYPE html>
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/mastering-elasticsearch/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/mastering-elasticsearch/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -77,7 +77,7 @@ CTYPE html>
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/rust-book/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/rust-book/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -89,13 +89,13 @@ CTYPE html>
                             <img src="images/work-wepiao-bo1.jpg">
                             <ul>
                                 <li>
-                                    Go是一个开源的编程语言，它很容易用于构建简单、可靠和高效的软件。”（摘自Go语言官方网站：http://golang.org)Go是一个开源的编程语言，它很容易用于构建简单、可靠和高效的软件。”（摘自Go语言官方网站：http://golang.org),<b>本书是为了帮助你开始以有效的方式使用Go语言，充分利用语言本身的特性和自带的标准库去编写清晰地道的Go程序</b><a href="http://github.com/golang-china/gopl-zh">Go</a>
+                                    Go是一个开源的编程语言，它很容易用于构建简单、可靠和高效的软件。”（摘自Go语言官方网站：https://golang.org)Go是一个开源的编程语言，它很容易用于构建简单、可靠和高效的软件。”（摘自Go语言官方网站：http://golang.org),<b>本书是为了帮助你开始以有效的方式使用Go语言，充分利用语言本身的特性和自带的标准库去编写清晰地道的Go程序</b><a href="http://github.com/golang-china/gopl-zh">Go</a>
                                 </li>
                                 <li class="skill">
                                     <span class="cbp_tmicon-phone"></span>
                                     <!--span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/gopl-zh/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/gopl-zh/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -113,7 +113,7 @@ CTYPE html>
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-react"></span-->
-                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/openstack_understand_Neutron/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/openstack_understand_Neutron/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -131,7 +131,7 @@ CTYPE html>
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-vue"></span-->
-                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/build-web-application-with-golang/">Read it</a></span>
+                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/build-web-application-with-golang/">Read it</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -148,8 +148,8 @@ CTYPE html>
                                 <li class="skill">
                                     <!--span class="cbp_tmicon-phone"></span>
                                     <span><b>JS</b></span>
-                                    <a href="https://github.com/kissyteam/kissy"><span class="i-kissy"></span></a-->
-                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/blockchain-tutorial/">Read It</a></span>
+                                    <a href="httpss://github.com/kissyteam/kissy"><span class="i-kissy"></span></a-->
+                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/blockchain-tutorial/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -166,7 +166,7 @@ CTYPE html>
                                     <!--span class="cbp_tmicon-html"></span>
                                     <span class="fa fa-css3"></span>
                                     <span><b>JS</b></span-->
-                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/blockchain_guide/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/blockchain_guide/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -184,7 +184,7 @@ CTYPE html>
                                     <!--span class="fa fa-css3"></span>
                                     <span><b>JS</b></span>
                                     <span class="i-jquery"></span-->
-                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/gene_sequencing_book/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/gene_sequencing_book/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -199,7 +199,7 @@ CTYPE html>
                                 <li class="skill">
                                     <!--span><b>Ae</b></span>
                                     <span class="cbp_tmicon-video"></span-->
-                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/go-in-action-note/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/go-in-action-note/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -211,12 +211,12 @@ CTYPE html>
                             <img src="images/intern-lxu.jpg">
                             <ul>
                                 <li>
-                                    文章来自<a href="http://royluo.org/categories/KVM/">Royluo博客</a>，云谷计算整理
+                                    文章来自<a href="https://royluo.org/categories/KVM/">Royluo博客</a>，云谷计算整理
                                 </li>
                                 <li class="skill">
                                     <!--span><b>Ae</b></span>
                                     <span class="cbp_tmicon-video"></span-->
-                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/interrupt-virtualization/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/interrupt-virtualization/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
@@ -227,12 +227,12 @@ CTYPE html>
                             <time>2018-01</time>
                             <img src="images/work-puzzle.jpg">
                             <ul>
-                                <li>原文来自<a href="http://oliveryang.net/">Memory Dump In Cloud</a>，云谷计算整理</li>
+                                <li>原文来自<a href="https://oliveryang.net/">Memory Dump In Cloud</a>，云谷计算整理</li>
                                 <li class="skill">
                                     <!--span class="cbp_tmicon-font"></span>
                                     <span><b>Ps</b></span>
                                     <span><b>Ae</b></span-->
-                                    <span class="link"><a target="_blank" href="http://ygjs.tech/static/gitbooks/linux-block-driver/">Read It</a></span>
+                                    <span class="link"><a target="_blank" href="https://ygjs.tech/static/gitbooks/linux-block-driver/">Read It</a></span>
                                 </li>
                             </ul>
                         </div>
